@@ -1,5 +1,13 @@
 2011-03-14  Ben Elliston  <bje@gnu.org>
 
+	* runtest.exp (frame_version): Set to 1.5.1.
+	* configure.ac (AC_INIT): Set version to 1.5.1.
+	* configure: Regenerate.
+	* doc/dejagnu.xml (appversion, version): Set to 1.5.1.
+	* doc/dejagnu.texi: Regenerate.
+
+2011-03-14  Ben Elliston  <bje@gnu.org>
+
 	* dejagnu.h: Whitespace cleanups.
 
 2011-03-14  Ben Elliston  <bje@gnu.org>
